# noyalib

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  GLOSSARY.md  GOVERNANCE.md  MIGRATION.md  Makefile  PLAN.md  README.md  RELEASE-NOTES-v0.0.1.md  RELEASE-NOTES-v0.0.10.md  RELEASE-NOTES-v0.0.11.md  RELEASE-NOTES-v0.0.12.md  RELEASE-NOTES-v0.0.13.md  RELEASE-NOTES-v0.0.14.md  RELEASE-NOTES-v0.0.15.md  RELEASE-NOTES-v0.0.2.md  RELEASE-NOTES-v0.0.4.md  RELEASE-NOTES-v0.0.6.md  RELEASE-NOTES-v0.0.7.md  RELEASE-NOTES-v0.0.8.md  RELEASE-NOTES-v0.0.9.md  REUSE.toml  SECURITY.md  SUPPORT.md  about.hbs  about.toml  build.rs  deny.toml  glama.json  osv-scanner.toml  server.json
crates/noya-cli/: Cargo.toml  README.md  build.rs
crates/noya-cli/benches/: cli_dispatch.rs
crates/noya-cli/doc/: cli-reference.md  recipes.md
crates/noya-cli/examples/: README.md  ci-pipeline.sh  fix-quoted-numbers.sh  format-precommit.sh  validate-compose.sh  validate-github-actions.sh  validate-helm.sh  validate-k8s.sh  validate-pyproject.sh
crates/noya-cli/src/: lib.rs
crates/noya-cli/tests/: noyafmt_cli.rs  noyavalidate_cli.rs
crates/noyalib/: Cargo.toml  README.md  build.rs
crates/noyalib-lsp/: Cargo.toml  README.md
crates/noyalib-lsp/benches/: lsp_handlers.rs
crates/noyalib-lsp/doc/: editor-setup.md  protocol-coverage.md
crates/noyalib-lsp/examples/: README.md  editor-emacs.el  editor-helix.toml  editor-intellij.md  editor-neovim.lua  editor-sublime.json  editor-vscode.md  editor-zed.json  format-on-save.sh  handshake.sh  hover-cursor.sh
crates/noyalib-lsp/src/: diagnostics.rs  format.rs  lib.rs  main.rs
crates/noyalib-lsp/tests/: format_coverage.rs
crates/noyalib-mcp/: Cargo.toml  README.md  build.rs
crates/noyalib-mcp/benches/: mcp_tools.rs
crates/noyalib-mcp/doc/: agent-integration.md  tools-reference.md
crates/noyalib-mcp/examples/: README.md  client-claude-desktop.json  client-continue-dev.md  client-cursor.md  client-zed.json  format-call.sh  handshake.sh  hosted-mcp-run.md  set-then-get.sh
crates/noyalib-mcp/src/: lib.rs  main.rs  tools.rs
crates/noyalib-mcp/tests/: protocol.rs
crates/noyalib-wasm/: Cargo.toml  README.md  index.html
crates/noyalib-wasm/doc/: bundling.md  js-api.md
crates/noyalib-wasm/examples/: README.md  cst-edit.js  node-stringify.js  schema-validate.js
crates/noyalib-wasm/examples/browser/: index.html
crates/noyalib-wasm/src/: core.rs  lib.rs
crates/noyalib-wasm/tests/: native.rs
crates/noyalib/benches/: architecture.rs  benchmarks.rs  borrowed_vs_value.rs  comparison.rs  incremental_repair.rs  interner.rs  large_doc_soak.rs  lossless_u64.rs  mapping_key_clone.rs  numeric_parse.rs  parallel.rs  simd.rs  streaming_vs_value.rs  structural_bitmask.rs  v006_features.rs  validation_overhead.rs
crates/noyalib/benches/fixtures/: github_actions.yaml  k8s_deployment.yaml
crates/noyalib/doc/: errors.md  internals.md
crates/noyalib/examples/: alias.rs  all.rs  anchor_shared.rs  ariadne_diagnostic.rs  async_io.rs  bench.rs  binary.rs  borrow.rs  bridge.rs  comments.rs  comments_at.rs  config_macros.rs  deep.rs  diagnostic.rs  dynamic.rs  emit.rs  env.rs  errors.rs  flatten.rs  global.rs  hello.rs  i18n_formatters.rs  include_directive.rs  inherit.rs  interner.rs  lossless_edit.rs  lossless_u64.rs  mask.rs  modify.rs  nostd.rs  overlay.rs  parallel.rs  patch.rs  pipes.rs  portable.rs  preserve.rs  properties_interpolation.rs  read_iterator.rs  recovery_lenient.rs  recursive.rs  (+23 more)
crates/noyalib/examples/wasm/: Cargo.toml
crates/noyalib/src/: anchors.rs  ariadne_adapter.rs  base64.rs  borrowed.rs  comments.rs  de.rs  diagnostic.rs  doc_boundary.rs  document.rs  error.rs  figment.rs  flattened.rs  include.rs  interner.rs  lib.rs  parallel.rs  policy.rs  recovery.rs  robotics.rs  schema.rs  schema_codegen.rs  schema_validate.rs  ser.rs  simd.rs  span_context.rs  spanned.rs  streaming.rs  sval_adapter.rs  tokio_async.rs  validated_miette.rs  value.rs
crates/noyalib/src/compat/: mod.rs  serde_yaml.rs
crates/noyalib/src/cst/: coerce.rs  document.rs  entry.rs  mod.rs  syntax.rs
crates/noyalib/src/de/: config.rs  deserializer.rs
crates/noyalib/src/parser/: events.rs  loader.rs  mod.rs  scanner.rs
crates/noyalib/src/value/: convert.rs  mapping.rs  number.rs  serde_impl.rs  tag.rs
crates/noyalib/src/with/: singleton_map.rs  singleton_map_optional.rs  singleton_map_recursive.rs  singleton_map_with.rs
crates/noyalib/tests/: alias_dual_label.rs  anchor_shared_ser.rs  anchors.rs  ariadne_adapter.rs  binary_serde_bytes.rs  borrowed_alias_resolution.rs  budget_breach.rs  coerce_to_schema.rs  coerce_to_schema_extra.rs  competitive_features_full.rs  competitor_bugs.rs  cov_number_ord.rs  coverage_100.rs  coverage_boost.rs  coverage_borrowed.rs  coverage_borrowed_full.rs  coverage_cst_green.rs  coverage_de.rs  coverage_de_include.rs  coverage_error.rs  coverage_final.rs  coverage_final_sweep.rs  coverage_final_sweep2.rs  coverage_final_sweep4.rs  coverage_fmt.rs  coverage_gaps.rs  coverage_loader.rs  coverage_misc.rs  coverage_number_unsigned.rs  coverage_recovery.rs  coverage_remaining.rs  coverage_scanner.rs  coverage_schema_validate.rs  coverage_ser.rs  coverage_singleton_map.rs  coverage_spanned_anchors.rs  coverage_value.rs  coverage_value_serde.rs  cst_anchors.rs  cst_document_coverage.rs  (+70 more)
crates/noyalib/tests/spec/: anchors_aliases.rs  block_scalars.rs  (+6 more)
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
fuzz/: Cargo.toml
fuzz/corpus/seed/: anchors.yaml  basic.yaml  edge_cases.yaml  flow.yaml  multi_doc.yaml  nested.yaml  scalars.yaml  tags.yaml
fuzz/fuzz_targets/: fuzz_borrowed_alias.rs  fuzz_diff.rs  fuzz_double_quoted.rs  fuzz_from_value.rs  fuzz_multi_doc.rs  fuzz_no_span_loader.rs  fuzz_parse.rs  fuzz_roundtrip.rs  fuzz_strict.rs  fuzz_yaml_v1_1.rs
noyalib-lsp/: Cargo.toml  README.md
noyalib-lsp/src/: hover.rs  lib.rs  main.rs
noyalib-lsp/tests/: protocol.rs
noyalib-wasm/: Cargo.toml  index.html
noyalib-wasm/src/: core.rs  lib.rs
noyalib-wasm/tests/: wasm.rs
(+346 files in other folders)
