[workspace]
resolver = "2"
members = [
    "crates/noyalib",
    "crates/noya-cli",
    "crates/noyalib-lsp",
    "crates/noyalib-mcp",
    "crates/xtask",
]
# `noyalib-wasm` was split out to
# https://github.com/sebastienrousseau/noyalib-wasm as of
# v0.0.12 (ADR-0005 pilot). It releases in strict lockstep
# at the same `=0.0.X` version as this workspace.
exclude = ["crates/noyalib/examples/wasm", "fuzz"]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = "unwind"
rpath = false
strip = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
# Optimize for speed (3) over size ("s"). The parser is a hot
# library crate — `from_str::<Value>` on a 100 KB document is
# 30-50% faster under `opt-level = 3` than `"s"` because the
# scanner's tight per-byte dispatch and the loader's per-event
# match get fully inlined and vectorized. WASM bundle size is
# managed separately by `wasm-pack`'s post-build `wasm-opt -Os`
# pass in the noyalib-wasm satellite repo (ADR-0005).
opt-level = 3
# Keep overflow checks: the parser handles untrusted input and
# wraparound on indent/depth/size counters could turn DoS limit
# checks into bypassable computations. The cost is single-digit %
# on the hot scanner loop, well worth the security guarantee.
overflow-checks = true
panic = "abort"
rpath = false
strip = "symbols"

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
