[workspace]
resolver = "2"
members = ["crates/noyalib"]
# All four satellites now ship from their own repositories per
# ADR-0005 workspace split:
#   - `noyalib-wasm` → https://github.com/sebastienrousseau/noyalib-wasm (since v0.0.12)
#   - `noyalib-mcp`  → https://github.com/sebastienrousseau/noyalib-mcp  (since v0.0.13)
#   - `noyalib-lsp`  → https://github.com/sebastienrousseau/noyalib-lsp  (since v0.0.13)
#   - `noya-cli`     → https://github.com/sebastienrousseau/noya-cli     (since v0.0.13)
#
# All four release in strict lockstep at the same `=0.0.X`
# version as this workspace.
#
# The `[workspace]` table is retained (as a single-member
# workspace) to keep root-level `cargo` invocations working
# during the transition. Post-v0.0.14 will follow #134 to
# collapse this into a plain single-crate repo.
#
# `xtask` was internal tooling; the parts that need to keep
# running (release-prep automation, bench runner) migrate
# into `noya-cli` at #134 (release notes for v0.0.14).
exclude = ["crates/noyalib/examples/wasm", "fuzz"]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = "unwind"
rpath = false
strip = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
# Optimize for speed (3) over size ("s"). The parser is a hot
# library crate — `from_str::<Value>` on a 100 KB document is
# 30-50% faster under `opt-level = 3` than `"s"` because the
# scanner's tight per-byte dispatch and the loader's per-event
# match get fully inlined and vectorized. WASM bundle size is
# managed separately by `wasm-pack`'s post-build `wasm-opt -Os`
# pass in the noyalib-wasm satellite repo (ADR-0005).
opt-level = 3
# Keep overflow checks: the parser handles untrusted input and
# wraparound on indent/depth/size counters could turn DoS limit
# checks into bypassable computations. The cost is single-digit %
# on the hot scanner loop, well worth the security guarantee.
overflow-checks = true
panic = "abort"
rpath = false
strip = "symbols"

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
