[package]
name = "noyalib-lsp"
version = "0.0.1"
edition = "2021"
rust-version = "1.75.0"
license = "MIT OR Apache-2.0"
description = "Language Server Protocol implementation for noyalib — YAML formatting, validation, and hover-driven JSON Schema descriptions"
repository = "https://github.com/sebastienrousseau/noyalib"
homepage = "https://github.com/sebastienrousseau/noyalib"
documentation = "https://docs.rs/noyalib-lsp"
readme = "README.md"
keywords = ["yaml", "lsp", "language-server", "editor", "noyalib"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]

[lib]
name = "noyalib_lsp"
path = "src/lib.rs"

[[bin]]
name = "noyalib-lsp"
path = "src/main.rs"

[dependencies]
noyalib = { path = "..", version = "0.0.1", features = ["std", "validate-schema"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
