[package]
name = "noyalib-lsp"
version = "0.0.12"
edition = "2024"
# Transitive deps via the LSP transport stack (litemap 0.7.5,
# uuid 1.23) require rustc 1.85+. The noyalib core lib still
# compiles on 1.75; only the LSP server adopts the higher floor.
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
description = "Language Server Protocol implementation for noyalib — YAML formatting, validation, and hover-driven JSON Schema descriptions"
repository = "https://github.com/sebastienrousseau/noyalib"
homepage = "https://github.com/sebastienrousseau/noyalib"
documentation = "https://docs.rs/noyalib-lsp"
readme = "README.md"
keywords = ["yaml", "lsp", "language-server", "editor", "noyalib"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]

[lib]
name = "noyalib_lsp"
path = "src/lib.rs"

[[bin]]
name = "noyalib-lsp"
path = "src/main.rs"

[dependencies]
noyalib = { path = "../noyalib", version = "0.0.12", features = ["std", "validate-schema"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "lsp_handlers"
harness = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
