[package]
name = "noyalib-mcp"
version = "0.0.12"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
description = "Model Context Protocol server exposing noyalib's lossless YAML editing to AI agents"
repository = "https://github.com/sebastienrousseau/noyalib"
homepage = "https://github.com/sebastienrousseau/noyalib"
documentation = "https://docs.rs/noyalib-mcp"
readme = "README.md"
keywords = ["yaml", "mcp", "ai", "claude", "tooling"]
categories = ["command-line-utilities", "encoding"]
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]

[lib]
name = "noyalib_mcp"
path = "src/lib.rs"

[[bin]]
name = "noyalib-mcp"
path = "src/main.rs"

[dependencies]
noyalib = { path = "../noyalib", version = "0.0.12" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "mcp_tools"
harness = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
