[package]
name = "noyalib-wasm"
version = "0.0.8"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
description = "WebAssembly (wasm-bindgen) bindings for the noyalib YAML library — browser-ready parse / serialise / lossless edit"
repository = "https://github.com/sebastienrousseau/noyalib"
homepage = "https://github.com/sebastienrousseau/noyalib"
documentation = "https://docs.rs/noyalib-wasm"
readme = "README.md"
keywords = ["yaml", "wasm", "wasm-bindgen", "browser", "noyalib"]
categories = ["wasm", "encoding", "parser-implementations"]
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
# Distributed via npm as `@noyalib/noyalib-wasm` rather than
# crates.io — the bindgen output is the consumer-facing artifact,
# not the Rust crate. Metadata above is filled in for
# `cargo metadata` consumers and for parity with the rest of the
# workspace.
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
noyalib = { path = "../noyalib", version = "0.0.8", features = ["std"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.cargo-machete]
# `console_error_panic_hook` is consumed only at runtime through
# the `wasm-bindgen` JS bridge; cargo-machete cannot see the
# import via the `js_sys` glue and reports it as unused. Keep
# the dep — disabling it would lose the readable JS-side
# stack-trace integration.
ignored = ["console_error_panic_hook"]

