[package]
name = "noyalib"
version = "0.0.4"
edition = "2021"
rust-version = "1.75.0"
license = "MIT OR Apache-2.0"
description = "A pure Rust YAML library with zero unsafe code and full serde integration"
repository = "https://github.com/sebastienrousseau/noyalib"
homepage = "https://github.com/sebastienrousseau/noyalib"
documentation = "https://docs.rs/noyalib"
readme = "README.md"
keywords = ["yaml", "serde", "serialization", "parser", "safe"]
categories = ["encoding", "parser-implementations", "config"]
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
autoexamples = false
include = [
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[lib]
name = "noyalib"
path = "src/lib.rs"

## ── Core ──
[[example]]
name = "hello"
path = "examples/hello.rs"
[[example]]
name = "dynamic"
path = "examples/dynamic.rs"
[[example]]
name = "modify"
path = "examples/modify.rs"
[[example]]
name = "deep"
path = "examples/deep.rs"
[[example]]
name = "std"
path = "examples/std.rs"
[[example]]
name = "variants"
path = "examples/variants.rs"
[[example]]
name = "tags"
path = "examples/tags.rs"

## ── Spec ──
[[example]]
name = "alias"
path = "examples/alias.rs"
[[example]]
name = "smart"
path = "examples/smart.rs"
[[example]]
name = "overlay"
path = "examples/overlay.rs"
[[example]]
name = "inherit"
path = "examples/inherit.rs"
[[example]]
name = "stream"
path = "examples/stream.rs"
[[example]]
name = "types"
path = "examples/types.rs"
[[example]]
name = "binary"
path = "examples/binary.rs"

## ── Logic & Security ──
[[example]]
name = "strict"
path = "examples/strict.rs"
[[example]]
name = "secure"
path = "examples/secure.rs"
[[example]]
name = "schema"
path = "examples/schema.rs"
[[example]]
name = "env"
path = "examples/env.rs"

## ── DX ──
[[example]]
name = "errors"
path = "examples/errors.rs"
[[example]]
name = "trace"
path = "examples/trace.rs"
[[example]]
name = "source"
path = "examples/source.rs"
[[example]]
name = "style"
path = "examples/style.rs"

## ── Advanced ──
[[example]]
name = "emit"
path = "examples/emit.rs"
[[example]]
name = "rename"
path = "examples/rename.rs"
[[example]]
name = "flatten"
path = "examples/flatten.rs"
[[example]]
name = "bridge"
path = "examples/bridge.rs"
[[example]]
name = "pipes"
path = "examples/pipes.rs"
[[example]]
name = "global"
path = "examples/global.rs"
[[example]]
name = "bench"
path = "examples/bench.rs"
## ── Future-Proof ──
[[example]]
name = "portable"
path = "examples/portable.rs"
[[example]]
name = "mask"
path = "examples/mask.rs"
[[example]]
name = "patch"
path = "examples/patch.rs"
[[example]]
name = "suggest"
path = "examples/suggest.rs"
[[example]]
name = "schema_ext"
path = "examples/schema_ext.rs"

## ── Deep Rust ──
[[example]]
name = "untagged"
path = "examples/untagged.rs"
[[example]]
name = "borrow"
path = "examples/borrow.rs"
[[example]]
name = "transcode"
path = "examples/transcode.rs"
[[example]]
name = "comments"
path = "examples/comments.rs"

## ── Final ──
[[example]]
name = "async_io"
path = "examples/async_io.rs"
[[example]]
name = "recursive"
path = "examples/recursive.rs"

## ── Platform ──
[[example]]
name = "diagnostic"
path = "examples/diagnostic.rs"
[[example]]
name = "nostd"
path = "examples/nostd.rs"
[[example]]
name = "preserve"
path = "examples/preserve.rs"

## ── Competitive Features ──
[[example]]
name = "replay"
path = "examples/replay.rs"
[[example]]
name = "registry"
path = "examples/registry.rs"
[[example]]
name = "scientific"
path = "examples/scientific.rs"
[[example]]
name = "validation"
path = "examples/validation.rs"
[[example]]
name = "anchor_shared"
path = "examples/anchor_shared.rs"

[[example]]
name = "all"
path = "examples/all.rs"

[[example]]
name = "lossless_edit"
path = "examples/lossless_edit.rs"

[[example]]
name = "comments_at"
path = "examples/comments_at.rs"

[[example]]
name = "entry_api"
path = "examples/entry_api.rs"

[[example]]
name = "flattened"
path = "examples/flattened.rs"

[[example]]
name = "schema_validation"
path = "examples/schema_validation.rs"
required-features = ["validate-schema"]

## ── Ecosystem Citizen ──
[[example]]
name = "include"
path = "examples/include.rs"

[[example]]
name = "figment"
path = "examples/figment.rs"
required-features = ["figment"]

[[example]]
name = "validation_garde"
path = "examples/validation_garde.rs"
required-features = ["garde"]

[[example]]
name = "validation_validator"
path = "examples/validation_validator.rs"
required-features = ["validator"]

[[example]]
name = "diagnostic_path"
path = "examples/diagnostic_path.rs"

[[example]]
name = "robotics_polymorphism"
path = "examples/robotics_polymorphism.rs"
required-features = ["robotics"]

[[example]]
name = "zero_copy_borrow"
path = "examples/zero_copy_borrow.rs"

[[example]]
name = "read_iterator"
path = "examples/read_iterator.rs"

[[example]]
name = "properties_interpolation"
path = "examples/properties_interpolation.rs"

[[example]]
name = "ariadne_diagnostic"
path = "examples/ariadne_diagnostic.rs"
required-features = ["ariadne"]

[[example]]
name = "validated_miette"
path = "examples/validated_miette.rs"
required-features = ["miette", "garde"]

[[example]]
name = "include_directive"
path = "examples/include_directive.rs"
required-features = ["include_fs"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
indexmap = { version = ">=2, <3", features = ["serde"] }
rustc-hash = ">=2, <3"
itoa = { version = "1", optional = true }
ryu = { version = "1", optional = true }
memchr = "2.7"
smallvec = { version = "1.13", default-features = false }
miette = { version = "7", optional = true }
ariadne = { version = "0.5", optional = true, default-features = false }
garde = { version = "0.22", optional = true, default-features = false, features = ["derive"] }
validator = { version = "0.19", optional = true, features = ["derive"] }
# NOTE: `serde_yaml` 0.9 is intentionally NOT a noyalib dependency.
# The upstream crate is unmaintained; the `compat-serde-yaml` shim
# exposes a name-for-name surface backed entirely by noyalib's own
# types so downstream `cargo audit` / `cargo deny` runs do not pick
# up the archived advisory chain. Migrating an in-flight
# `::serde_yaml::Value` from an un-migrated module flows through
# the Serde data model — `noyalib::to_value(&upstream_value)?` —
# the same universal-translator path Serde provides for every
# JSON-shaped library pair.
# JSON Schema codegen — derive `JsonSchema` for a Rust type and emit
# the schema as YAML for sharing / contract enforcement. Pulled in
# only when the `schema` feature is on so users who don't need
# codegen don't pay for the dep.
schemars = { version = "1.2", optional = true, default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0", optional = true }
# JSON Schema *validation* engine — pulled in only when the
# `validate-schema` feature is on. Default features are disabled so
# we don't drag in `reqwest` for HTTP `$ref` resolution; users who
# need that can re-enable it via their own dep.
jsonschema = { version = "0.33", optional = true, default-features = false }
# `figment` integration — drop-in `Provider` for the popular
# layered-configuration crate. Pulled in only when the `figment`
# feature is on so non-figment users don't pay for it.
figment = { version = "0.10", optional = true, features = ["env"] }
# NOTE: `serde-saphyr` lives under `[dependencies]` (not
# `[dev-dependencies]`) because Cargo doesn't allow optional
# dev-deps. It's gated behind the `compare-saphyr` feature and
# only used inside `#[cfg(feature = "compare-saphyr")]` bench
# arms; nothing in the runtime crate references it. Off by default
# so an `--all-features` build doesn't pull in the saphyr crate
# (which is fine on MSRV 1.85+ but still extra deps the rest of
# the workspace doesn't need).
serde-saphyr = { version = "0.0", optional = true }
# Parallel multi-document parsing — pulled in only when the
# `parallel` feature is on. Rayon is the de-facto safe data-parallel
# Rust crate and itself uses well-vetted unsafe internally; the
# `noyalib` runtime call sites stay `#![forbid(unsafe_code)]`.
rayon = { version = "1.10", optional = true }
# `serde_ignored` powers `from_str_strict<T>` — surfaces any keys
# in the input that `T` does not declare. Tiny (no transitive deps),
# but feature-gated behind `strict-deserialise` so the `minimal`
# profile (and FIPS / embedded users with strict dep policies) can
# turn it off.
serde_ignored = { version = "0.1", optional = true }

[dev-dependencies]
serde_json = "1.0"
serde_bytes = "0.11"
criterion = "0.5"
proptest = "1.11"
serde_yaml_ng = "0.10"
yaml-rust2 = "0.9"
rust-yaml = "0.0.5"
# Bench-only competitor surface. None of these ship transitively
# in any release artefact — they are dev-deps used exclusively by
# `crates/noyalib/benches/comparison.rs` for head-to-head Rust
# YAML benchmarks. See `doc/BENCHMARKS.md` for measured numbers.
#
# `serde_yml` is the maintainer's prior crate (a `serde_yaml` 0.9
# fork). `yaml-spanned` is the closest other span-tracking parser
# in the ecosystem.
serde_yml = "0.0"
yaml-spanned = "0.0"
# Ecosystem interop verification — proves noyalib's
# `Deserializer<'de>` works with the standard serde wrappers
# without any custom integration code.
serde_path_to_error = "0.1"
# `serde_ignored` is feature-gated as a runtime dep (powers
# `strict-deserialise`); duplicating it as a dev-dep keeps the
# `serde_ecosystem` interop test compiling under
# `--no-default-features` builds.
serde_ignored = "0.1"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "architecture"
harness = false

[[bench]]
name = "validation_overhead"
harness = false

[[bench]]
name = "incremental_repair"
harness = false

[[bench]]
name = "simd"
harness = false
required-features = ["simd"]

[[bench]]
name = "streaming_vs_value"
harness = false

[[bench]]
name = "large_doc_soak"
harness = false

[[bench]]
name = "structural_bitmask"
harness = false

[[bench]]
name = "numeric_parse"
harness = false

[features]
default = ["std", "fast-int", "fast-float", "strict-deserialise"]
# Branchless integer formatting via `itoa` (~10× faster than
# `Display::fmt` on integer scalars). Disabling drops the dep and
# falls back to `core::fmt`; output is identical, only the
# serializer hot path slows down.
fast-int = ["dep:itoa"]
# Branchless float formatting via `ryu` (Grisu-style algorithm).
# Disabling drops the dep and falls back to Rust's `{:?}` Debug
# format, which preserves float-ness (`1.0` stays `1.0`) but emits
# expanded decimal form for very large magnitudes (`{:?}` does not
# auto-switch to scientific notation the way ryu does).
fast-float = ["dep:ryu"]
# `from_str_strict` / `from_slice_strict` / `from_reader_strict`
# — surface YAML keys that the target struct does not declare as
# typed `Error::UnknownField`. Backed by `serde_ignored`. Off in
# the `minimal` profile for FIPS / embedded users with strict
# dep-budget policies; the regular `from_str` path is unaffected.
strict-deserialise = ["dep:serde_ignored"]
# Meta-feature: alias for "std-only, no formatting accelerators,
# no strict-deserialise helper" — for users with strict dep
# budgets (FIPS, embedded, audit-heavy environments) who want one
# explicit opt-in. Equivalent to
# `default-features = false, features = ["std"]`.
minimal = ["std"]
# Synchronise serde's std mode with ours so the `serde::de::Error`
# trait's `StdError` super-trait resolves consistently. With this
# wired, `cargo build --no-default-features` truly compiles in
# no_std and serde's de::Error does not require `std::error::Error`.
std = ["serde/std"]
miette = ["dep:miette"]
ariadne = ["dep:ariadne"]
robotics = []
# `!include` directive — post-parse walk that consults a
# user-supplied `crate::include::IncludeResolver` for every
# `Value::Tagged(!include, _)` node and substitutes the
# resolved content in-place. Pairs with `max_include_depth`
# for cycle bounding. Off by default so callers who never see
# `!include` scalars pay zero compile cost.
include = []
# Filesystem-backed `crate::include::SafeFileResolver` (root
# sandbox, symlink policy). Implies `include` + `std`.
include_fs = ["include", "std"]
garde = ["dep:garde"]
validator = ["dep:validator"]
wasm-opt = []
noyavalidate = ["std", "miette", "miette/fancy", "validate-schema"]
# Drop-in surface compatible with `serde_yaml` 0.9. Adds the
# `noyalib::compat::serde_yaml` module with name-for-name re-exports
# and the `Error` parity needed for logic-transparent migration —
# every type the shim exposes is a noyalib-native type, not a
# re-export of the archived upstream crate. Off by default so users
# who do not need migration help do not see the extra surface.
compat-serde-yaml = []
# JSON Schema codegen via `schemars`. With this on you can
# `#[derive(noyalib::JsonSchema)]` for a Rust type and call
# `noyalib::schema_for::<T>()` / `schema_for_yaml::<T>()` to obtain
# the schema as a `Value` or as YAML text. Schema *validation* of
# YAML against the schema is covered by Phase 3.2 (CLI surface).
schema = ["dep:schemars", "dep:serde_json"]
# JSON Schema validation engine. With this on you can call
# `noyalib::validate_against_schema(value, schema)` to enforce a
# JSON Schema 2020-12 contract against parsed YAML data. Implies
# `schema` so the codegen and validation halves of Phase 3 can be
# enabled together with one flag.
validate-schema = ["schema", "dep:jsonschema"]
# `figment` provider integration. With this on, `noyalib::figment`
# exposes a `Yaml` provider that drops into `figment::Figment`
# layering chains the same way `figment::providers::Toml` /
# `figment::providers::Json` do.
figment = ["dep:figment", "std"]
# SIMD-friendly multi-byte search primitives for parser hot paths.
# Ships a feature-gated `noyalib::simd` module containing
# `find_any_of` and friends — vectorised via memchr's SSE2 / NEON
# arity-1/2/3 primitives where applicable, SWAR (8-byte-stride
# u64 packing) for needle sets of 4+ bytes, and a scalar fallback.
# Pure-safe Rust (no `unsafe`) — preserves the workspace
# `unsafe_code = "forbid"` invariant. Off by default so the most
# conservative environments stay on the byte-by-byte baseline; on
# by callers who want the throughput uplift on supported targets.
simd = []
# Opt-in cross-library benchmark comparison against `serde-saphyr`.
# Off by default because the saphyr crate's manifest requires Rust
# 2024 edition (Cargo 1.85+). Enabling this feature pulls saphyr in
# as a dev-dep and gates the comparison bench arms on its presence.
compare-saphyr = ["dep:serde-saphyr"]
# Parallel multi-document deserialisation via Rayon. Adds the
# `noyalib::parallel` module:
#   - `parallel::parse<T>(&str) -> Result<Vec<T>>` — typed deserialise.
#   - `parallel::values(&str) -> Result<Vec<Value>>` — dynamic-tree variant.
#   - `parallel::split(&str) -> Vec<&str>` — exposed boundary scanner
#     for callers driving their own concurrency primitives.
# All three pre-scan `---` document boundaries on a single thread
# then deserialise each document in parallel via Rayon's global
# thread pool. Off by default to keep the runtime dep list lean
# for users that only parse single-document inputs.
parallel = ["dep:rayon", "std"]
# Portable-SIMD (`std::simd`) structural scanner. Builds a 16/32/
# 64-byte-wide `SimdScanner` that finds any byte in a needle set
# in a single SIMD pass. Requires the nightly toolchain because
# `core::simd` is unstable (`#![feature(portable_simd)]`). On by
# default for nightly users who want maximum throughput; the
# stable `simd` feature still ships the memchr / SWAR fall-back so
# stable builds are not regressed.
nightly-simd = ["simd"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Linting config
[lints.rust]
# Two custom cfg flags are emitted by `build.rs`: `noyalib_nightly`
# (set when rustc is a nightly toolchain so `nightly-simd` can opt
# in) and `noyalib_coverage` (set when `NOYALIB_COVERAGE=1` is
# exported so coverage-instrumentation hot paths can opt out via
# `#[cfg_attr(noyalib_coverage, coverage(off))]`). Declare them
# here as well as in `build.rs` so `cargo publish`'s verification
# pass — which runs without `build.rs` cfg propagation in some
# topologies — does not surface `unexpected_cfgs` warnings.
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(noyalib_nightly)',
    'cfg(noyalib_coverage)',
    'cfg(docsrs)',
] }
missing_copy_implementations = "warn"
missing_docs = "warn"
unstable_features = "warn"
unused_extern_crates = "warn"
unused_results = "warn"

bare_trait_objects = "allow"
elided_lifetimes_in_paths = "allow"

missing_debug_implementations = "forbid"
non_ascii_idents = "forbid"
unreachable_pub = "forbid"
unsafe_code = "forbid"

dead_code = "deny"
deprecated_in_future = "deny"
ellipsis_inclusive_range_patterns = "deny"
explicit_outlives_requirements = "deny"
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
noop_method_call = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused = { level = "deny", priority = -1 }
unused_features = "deny"
unused_import_braces = "deny"
unused_labels = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
variant_size_differences = "deny"

[package.metadata.clippy]
warn-lints = [
    "clippy::all",
    "clippy::pedantic",
    "clippy::cargo",
    "clippy::nursery",
]
