[package]
name = "xtask"
version = "0.0.1"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
description = "Internal release-pipeline tooling for the noyalib workspace"
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
# Package is `noya-cli`; the [lib] inside it is `noya_cli` (snake-case).
# `version` pin is required by `cargo-deny`'s wildcard ban rule, even
# for path-only intra-workspace deps.
noya-cli      = { path = "../noya-cli", version = "0.0.8", default-features = false, features = ["noyafmt"] }
clap          = { version = "4.5", features = ["derive"] }
clap_complete = "4.6"
clap_mangen   = "0.3"
