[package]
name = "noyalib-wasm"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
noyalib = { path = "../.." }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.cargo-machete]
# `serde` here is consumed by the inline `#[derive(Serialize,
# Deserialize)]` macros in the example source; cargo-machete's
# AST scan misses the proc-macro reference.
ignored = ["serde"]

[profile.release]
opt-level = "s"
lto = true
strip = true
